fix: footer items gap

--- a/styles/layouts/_footer.scss
+++ b/styles/layouts/_footer.scss
@@ -22,6 +22,7 @@
   &-inner {
     z-index: 1;
     position: relative;
+    gap: 1rem;
 
     @include mobile {
       flex-direction: column;
